[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Matteo Giachino <matteog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
async-std = "1.7.0"
thiserror = "*"